# Deep-Learning-Colorization

./: Makefile  README.md  pyproject.toml
dlcolorization/: __init__.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
